--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.6.1",
+    "nodemon": "^1.19.4"
   },
   "devDependencies": {
     "nodemailer": "^6.6.1",
